golden/error/runtime_collection_scalar_kv.test
{
  "single",
  "key": "value",
}

# output:
 --> stdin:3:7
  |
3 |   "key": "value",
  |        ^
Error: Expected scalar element, not key-value.

 --> stdin:2:2
  |
2 |   "single",
  |   ^~~~~~~~
Note: The collection is a set and not a record, because of this scalar value.
